# kernel-hobby

./: .gitignore  Cargo.toml  Makefile  README.en.md  README.md  kernel.ld  rust-toolchain.toml  x86_64-anime_os.json
.cargo/: config.toml
.claude/: settings.local.json
docs/: roadmap-userspace.md
fs/: motd.txt  readme.txt
src/: allocator.rs  console.c  console.h  csr.h  elf.c  elf.h  entry.S  fs.c  fs.h  fsformat.h  gdt.rs  initcode.S  interrupts.rs  kalloc.c  kalloc.h  kernelvec.S  main.c  main.rs  memory.rs  net.c  net.h  plic.c  plic.h  proc.c  proc.h  shell.c  shell.h  shell.rs  spinlock.c  spinlock.h  swtch.S  trap.c  trap.h  types.h  uart.c  uart.h  user.c  user.h  vga_buffer.rs  virtio.c  (+3 more)
src/task/: executor.rs  keyboard.rs  mod.rs
tools/: echo_server.py  gen_demo_svg.py  mkfs.c  run_cmd.py  run_seq.py  run_tcp.py  run_tcp_boot.py
user/: cowtest.c  hello.c  init.c  lazytest.c  mmaptest.c  user.ld  usys.h  uthread.c
